code/worker_thread/recipe-02/samples/log.txt
g++ -o sample_task_queue1 ../src/worker_thread.cpp -Wall -g -std=c++11 -DNDEBUG -I../include sample_task_queue1.cpp -lpthread  
In file included from /usr/include/c++/5/thread:39:0,
                 from ../include/worker_thread.hpp:11,
                 from ../src/worker_thread.cpp:1:
/usr/include/c++/5/functional: In instantiation of ‘struct std::_Bind<mini_util::Task()>’:
../include/task_queue.hpp:116:23:   recursively required from ‘void mini_util::TaskQueue::PushTask(Fn&&, Args&& ...) [with Fn = mini_util::Task; Args = {}]’
../include/task_queue.hpp:116:23:   required from ‘void mini_util::TaskQueue::PushTask(Fn&&, Args&& ...) [with Fn = void (*)(); Args = {}]’
../src/worker_thread.cpp:67:44:   required from here
/usr/include/c++/5/functional:1125:39: error: no match for call to ‘(mini_util::Task) ()’
  = decltype( std::declval<_Functor&>()(
                                       ^
In file included from /usr/include/c++/5/memory:79:0,
                 from ../include/task_queue.hpp:11,
                 from sample_task_queue1.cpp:1:
/usr/include/c++/5/functional: In instantiation of ‘struct std::_Bind<mini_util::Task()>’:
../include/task_queue.hpp:116:23:   recursively required from ‘void mini_util::TaskQueue::PushTask(Fn&&, Args&& ...) [with Fn = mini_util::Task; Args = {}]’
../include/task_queue.hpp:116:23:   required from ‘void mini_util::TaskQueue::PushTask(Fn&&, Args&& ...) [with Fn = void (&)(int); Args = {int&}]’
sample_task_queue1.cpp:61:41:   required from here
/usr/include/c++/5/functional:1125:39: error: no match for call to ‘(mini_util::Task) ()’
  = decltype( std::declval<_Functor&>()(
                                       ^
Makefile:20: recipe for target 'sample_task_queue1' failed
make: *** [sample_task_queue1] Error 1
